--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/index_style.css" />
-    <title>Fokir - Personal Bootstrap Portfolio</title>
+    <title>Asma Radwan Personal Portfolio</title>
 </head>
 
 <body>
@@ -50,9 +50,9 @@
             <div
                 class="homepage container p-5 text-center text-white d-flex flex-column justify-content-center align-items-center justify-space-around">
                 <h5 class="font-weight-bold">Hello , I'm</h5>
-                <h1>ALEX SMITH</h1>
+                <h1>ASMA RADWAN</h1>
                 <p class="font-weight-lighter">
-                    Professional Web <span id="replaceStrings"></span>
+                    Data <span id="replaceStrings"></span>
                 </p>
             </div>
         </div>
@@ -83,24 +83,27 @@
                     <div class="about-data">
                         <h2 class="font-weight-bolder">HELLO ,</h2>
                         <p class="text-muted pb-3 data">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                            enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                            nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        I’m a Data Analyst with hands-on experience through professional trainings 
+                        and over 10 real-world projects across various domains. I believe every number tells a story, 
+                        and my mission is to uncover that story and present it in a way that drives smart, strategic 
+                        decision-making. 
+                        I’m known for my discipline, on-time delivery, and high-quality results. I’m flexible, easy to 
+                        communicate with, and skilled at managing my time to meet deadlines without compromising quality. 
+                        Whether you’re looking for in-depth data analysis, interactive dashboards using Power BI or 
+                        Tableau, or business reports that give you a clear view of the big picture, I’m here to deliver 
+                        custom solutions built on a deep understanding of your goals. 
+                        Let’s turn your data into a real business advantage.   
                         </p>
                         <div class="row">
                             <div class="col-md-5">
                                 <div class="list1">
                                     <p class="py-1 font-weight-bold">
                                         Name:
-                                        <span class="text-muted font-weight-light">Rdam smith</span>
+                                        <span class="text-muted font-weight-light">Asma Radwan</span>
                                     </p>
                                     <p class="py-1 font-weight-bold">
                                         Age:
-                                        <span class="text-muted font-weight-light">26 Years</span>
+                                        <span class="text-muted font-weight-light">20 Years</span>
                                     </p>
                                     <p class="py-1 font-weight-bold">
                                         Freelance:
@@ -112,15 +115,15 @@
                                 <div class="list1">
                                     <p class="py-1 font-weight-bold">
                                         Job Title:
-                                        <span class="text-muted font-weight-light">UI/UX Designer</span>
+                                        <span class="text-muted font-weight-light">Data Analyst</span>
                                     </p>
                                     <p class="py-1 font-weight-bold">
                                         Location:
-                                        <span class="text-muted font-weight-light">United States, US</span>
+                                        <span class="text-muted font-weight-light">Alexandria, Egypt</span>
                                     </p>
                                     <p class="py-1 font-weight-bold">
                                         Email:
-                                        <span class="text-muted font-weight-light">Rdam251@gmail.com</span>
+                                        <span class="text-muted font-weight-light">asma.magdy.hamed@gmail.com</span>
                                     </p>
                                 </div>
                             </div>
@@ -1080,7 +1083,7 @@
 
     <section id="contact">
         <div class="container text-center py-5">
-            <h2 class="font-weight-bolder py-3">Contact Us</h2>
+            <h2 class="font-weight-bolder py-3">Contact Me</h2>
             <div class="contact py-4">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
