--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="home">
         <div class="overlay">
             <nav class="navbar navbar-expand-sm navbar-dark bg-transparent mx-5 px-5">
-                <a class="navbar-brand mx-5 px-5 font-weight-bold" href="#">Fokir</a>
+                <a class="navbar-brand mx-5 px-5 font-weight-bold" href="#">Asma`s Portfolio</a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -271,8 +271,8 @@
                                         <div class="modal-dialog" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title text-danger" id="exampleModalLabel">Project
-                                                        Name</h5>
+                                                    <h5 class="modal-title text-danger" id="exampleModalLabel">Goodreads Book Review Dashboard
+                                                    </h5>
                                                     <button type="button" class="close" data-dismiss="modal"
                                                         aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
@@ -280,21 +280,20 @@
                                                 </div>
                                                 <div class="modal-body text-left">
                                                     <img class="img-fluid" src="images/portfolio/2.png">
-                                                    <p class="text-muted my-2">Lorem ipsum dolor sit amet, consectetur
-                                                        adipisicing elit. Ab perspiciatis et, voluptas esse ex expedita
-                                                        atque. Impedit porro eveniet, culpa rerum in doloremque velit
-                                                        perspiciatis doloribus ratione. Nobis, nisi, quasi.</p>
+                                                    <p class="text-muted my-2">This interactive dashboard provides insightful visualizations on Goodreads book reviews. 
+                                                        It analyzes star ratings, publication trends, top-reviewed books, and author performance, 
+                                                        offering a deep dive into reader engagement and author popularity.</p>
                                                     <div class="row mx-1">
                                                         <i class="fa fa-user mr-2 pt-1"></i>
-                                                        <p>alex smith</p>
+                                                        <p>NTI Team</p>
                                                     </div>
                                                     <div class="row mx-1">
                                                         <i class="fa fa-globe mr-2 pt-1"></i>
-                                                        <a href="#">www.example.com</a>
+                                                        <a href="#">https://github.com/AsmaRadwan/GoodReads-Project</a>
                                                     </div>
                                                     <div class="row m-1">
                                                         <i class="fa fa-calendar mr-2 pt-1"></i>
-                                                        <p>12 June 2018</p>
+                                                        <p>1 August 2025</p>
                                                     </div>
                                                     <h4>Share</h4>
                                                     <div class="row mx-2">
@@ -681,7 +680,7 @@
                 <div class="col-md-3">
                     <div class="counter-item text-center">
                         <i class="fas fa-cloud-download-alt fa-2x"></i>
-                        <h4 class="count-num my-3 font-weight-bold"><span class="counter" data-count="1800">0</span>
+                        <h4 class="count-num my-3 font-weight-bold"><span class="counter" data-count="500">0</span>
                         </h4>
                         <span class="text-muted font-weight-bold">Files Downloaded</span>
                     </div>
