--- a/index.html
+++ b/index.html
@@ -288,6 +288,14 @@
                                                         <p>NTI Team</p>
                                                     </div>
                                                     <div class="row mx-1">
+                                                        <i class="fa fa-clock mr-2 pt-1"></i>
+                                                        <p>1 Week</p>
+                                                    </div>
+                                                    <div class="row mx-1">
+                                                        <i class="fa fa-dollar-sign mr-2 pt-1"></i>
+                                                        <p>$20</p>
+                                                    </div>
+                                                    <div class="row mx-1">
                                                         <i class="fa fa-globe mr-2 pt-1"></i>
                                                         <a href="#">https://github.com/AsmaRadwan/GoodReads-Project</a>
                                                     </div>
@@ -658,43 +666,6 @@
                         </div>
                     </div>
                     
-    </section>
-
-    <section id="counters">
-        <div class="container py-5">
-            <div class="row py-2">
-                <div class="col-md-3">
-                    <div class="counter-item text-center">
-                        <i class="fas fa-users fa-2x"></i>
-                        <h4 class="count-num my-3 font-weight-bold"><span class="counter" data-count="200">0</span></h4>
-                        <span class="text-muted font-weight-bold">Team Members</span>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="counter-item text-center">
-                        <i class="fas fa-project-diagram fa-2x"></i>
-                        <h4 class="count-num my-3 font-weight-bold"><span class="counter" data-count="20">0</span></h4>
-                        <span class="text-muted font-weight-bold">Complete Projects</span>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="counter-item text-center">
-                        <i class="fas fa-cloud-download-alt fa-2x"></i>
-                        <h4 class="count-num my-3 font-weight-bold"><span class="counter" data-count="500">0</span>
-                        </h4>
-                        <span class="text-muted font-weight-bold">Files Downloaded</span>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="counter-item text-center">
-                        <i class="far fa-file-code fa-2x"></i>
-                        <h4 class="count-num my-3 font-weight-bold"><span class="counter" data-count="1200">0</span>
-                        </h4>
-                        <span class="text-muted font-weight-bold">Lines of Code</span>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <section id="testnomial">
